--- a/main.css
+++ b/main.css
@@ -1,105 +1,126 @@
 body {
-    background-color: green;
+  background-color: #ffc0cb;
 }
 
 h2 {
-    text-align: center;
-    color : black;
+  text-align: center;
+  color: black;
 }
 
 .container {
-    font-family: 'Inter', sans-serif;
-    margin-top: 25px;
-    margin-left: auto;
-    margin-right: auto;
-    margin-bottom: 25px;
-    border-radius: 5px;
-    background-color: lightgrey;
-    padding: 20px;
-    width: 60%;
-    font-size: medium;
+  font-family: "Inter", sans-serif;
+  border: 3px solid #db7093;
+  margin-top: 25px;
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 25px;
+  border-radius: 50px 0px;
+  background-color: lightgrey;
+  padding: 20px;
+  width: 60%;
+  font-size: medium;
 }
 
-input[type=text], select, textarea {
-    width: 100%;
-    padding: 12px;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-    box-sizing: border-box;
-    margin-top: 6px;
-    margin-bottom: 16px;
-    resize: vertical
+input[type="text"],
+select,
+textarea {
+  width: 100%;
+  padding: 12px;
+  border: 2px solid #ffc0cb;
+  border-radius: 4px;
+  box-sizing: border-box;
+  margin-top: 6px;
+  margin-bottom: 16px;
+  resize: vertical;
 }
 
-input[type=email], select, textarea {
-    width: 100%;
-    padding: 12px;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-    box-sizing: border-box;
-    margin-top: 6px;
-    margin-bottom: 16px;
-    resize: vertical
+input[type="email"],
+select,
+textarea {
+  width: 100%;
+  padding: 12px;
+  border: 2px solid #ffc0cb;
+  border-radius: 4px;
+  box-sizing: border-box;
+  margin-top: 6px;
+  margin-bottom: 16px;
+  resize: vertical;
 }
 
-input[type=password], select, textarea {
-    width: 100%;
-    padding: 12px;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-    box-sizing: border-box;
-    margin-top: 6px;
-    margin-bottom: 16px;
-    resize: vertical
+input[type="password"],
+select,
+textarea {
+  width: 100%;
+  padding: 12px;
+  /* border: 10px solid #ffc0cb; */
+  border-radius: 4px;
+  box-sizing: border-box;
+  margin-top: 6px;
+  margin-bottom: 16px;
+  resize: vertical;
+  border: 2px solid;
 }
 
-input[type=number], select, textarea {
-    width: 100%;
-    padding: 12px;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-    box-sizing: border-box;
-    margin-top: 6px;
-    margin-bottom: 16px;
-    resize: vertical
+input[type="number"],
+select,
+textarea {
+  width: 100%;
+  padding: 12px;
+  border: 2px solid #ffc0cb;
+  border-radius: 4px;
+  box-sizing: border-box;
+  margin-top: 6px;
+  margin-bottom: 16px;
+  resize: vertical;
 }
 
-input[type=range], select, textarea {
-    width: 100%;
-    padding: 12px;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-    box-sizing: border-box;
-    margin-top: 6px;
-    margin-bottom: 16px;
-    resize: vertical
+input[type="range"],
+select,
+textarea {
+  width: 100%;
+  padding: 12px;
+  border: 2px solid #ffc0cb;
+  border-radius: 4px;
+  box-sizing: border-box;
+  margin-top: 6px;
+  margin-bottom: 16px;
+  resize: vertical;
 }
 
-input[type=submit] {
-    background-color: forestgreen;
-    color: white;
-    padding: 12px 20px;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
-    font-size: medium;
-    
+input[type="submit"] {
+  background-color: forestgreen;
+  color: white;
+  padding: 12px 20px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  font-size: medium;
 }
 
-input[type=submit]:hover {
-    background-color: darkgreen;
+input[type="submit"]:hover {
+  background-color: darkgreen;
 }
 
-input[type=reset] {
-    background-color: forestgreen;
-    color: white;
-    padding: 12px 20px;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
-    font-size: medium;
+input[type="reset"] {
+  background-color: forestgreen;
+  color: white;
+  padding: 12px 20px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  font-size: medium;
 }
 
-input[type=reset]:hover {
-    background-color: darkgreen;
+input[type="reset"]:hover {
+  background-color: darkgreen;
+}
+input,
+textarea {
+  outline: none;
+  transition: 1s;
+}
+input:focus,
+textarea:focus {
+  margin-top: 15px;
+  outline: none;
 }
